[gd_scene load_steps=5 format=3 uid="uid://bk2jqyro0omrn"]

[ext_resource type="Script" path="res://characters/player.gd" id="1_gefim"]
[ext_resource type="Texture2D" uid="uid://b6qsn4guc50g6" path="res://art/player/dog.png" id="2_riuo2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qggx6"]
size = Vector2(14, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_2omej"]
radius = 27.0185

[node name="Player" type="CharacterBody2D"]
top_level = true
script = ExtResource("1_gefim")
move_speed = 1000.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_riuo2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qggx6")

[node name="interaction_components" type="Node2D" parent="."]

[node name="interaction_area" type="Area2D" parent="interaction_components"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction_components/interaction_area"]
shape = SubResource("CircleShape2D_2omej")

[node name="Label" type="Label" parent="interaction_components"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -46.0
offset_right = 20.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="interaction_components/interaction_area" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="interaction_components/interaction_area" to="." method="_on_interaction_area_area_exited"]
